--- a/public/stylesheets/scss/style.scss
+++ b/public/stylesheets/scss/style.scss
@@ -229,6 +229,7 @@ article section {
             bottom: 25px;
             right: 0;
         }
+        padding: 20px;
     }
 
     #category-navbar {
